# BroForceSDL

./: .gitignore  CMakeLists.txt  README.md  compileLibs.sh
src/: main.cpp
src/component/: component.h  entity.h  sprite.h
src/managers/: componentManager.h  entity.cpp  entity.h  entityManager.cpp  entityManager.h  input.cpp  input.h  manager.h  render.cpp  render.h  timeLogic.cpp  timeLogic.h
